--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   http: ^0.13.5
   dartz: ^0.10.1
   get_it: ^7.2.0
+  flutter_screenutil: ^5.6.0
+  google_fonts: ^3.0.1
+  flutter_svg: ^1.1.6
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/pngs/
+    - assets/svgs/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
