--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  flutter_localizations: # Add this line
+    sdk: flutter         # Add this line
+  intl: ^0.17.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -72,6 +74,7 @@ flutter:
   assets:
     - assets/pngs/
     - assets/svgs/
+    - assets/languages/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
