--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.6
   cached_network_image: ^3.2.3
+  wiredash: ^1.5.0
 
 dev_dependencies:
   flutter_test:
