--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   wiredash: ^1.5.0
   json_serializable: ^6.6.0
   json_annotation: ^4.8.0
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
 
