--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   json_serializable: ^6.6.0
   json_annotation: ^4.8.0
   youtube_player_flutter: ^8.1.2
+  isar: ^3.0.5
+  isar_flutter_libs: ^3.0.5
 
 dev_dependencies:
 
@@ -66,6 +68,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
+  isar_generator: ^3.0.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
