--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
+  flutter_spinkit: ^5.1.0
+  flutter_native_splash: ^2.2.18
 
 dev_dependencies:
 
