--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.0.2+4
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -57,6 +57,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_native_splash: ^2.2.8
   flutter_launcher_icons: ^0.11.0
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
 
@@ -83,7 +84,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   assets:
     - assets/pngs/
     - assets/svgs/
