--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+4
+version: 1.0.4+6
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -58,6 +58,9 @@ dependencies:
   flutter_native_splash: ^2.2.8
   flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^1.1.0
+  firebase_core: ^2.7.1
+  firebase_analytics: ^10.1.5
+  firebase_crashlytics: ^3.0.16
 
 dev_dependencies:
 
